--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,18 @@
 [build]
   command = "npm run build"
   publish = "dist"
-  functions = "netlify/functions"  # <--- ESTA LINEA ES LA CLAVE
+  functions = "netlify/functions" # <--- OBLIGATORIO
 
 [functions]
-  node_bundler = "esbuild"
+  node_bundler = "esbuild" # <--- Ayuda a procesar import/export moderno
 
-# Redirección directa para evitar problemas de CORS y rutas
+# Redirección de API (para usar /api/cybermapa en el frontend)
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
-  force = true
 
+# Redirección SPA (para que React funcione al recargar)
 [[redirects]]
   from = "/*"
   to = "/index.html"
